# snack

./: .gitignore  ChangeLog.md  README.md  snack.cabal
example/: CompletionExmaple.hs
example1/: Main.hs
src/: Snack.hs  Transform.hs  Value.hs
src/Snack/: AppEvent.hs  CommandLine.hs  Completion.hs  Editor.hs  Main.hs  Parser.hs  SnackWidget.hs  Terminal.hs
src/Snack/CommandLine/: Editor.hs  Event.hs  Generic.hs  Value.hs
src/Snack/Completion/: Event.hs  State.hs
src/Snack/Event/: Completion.hs  HandleEvent.hs
src/Snack/Handle/: Attribute.hs  Event.hs  Render.hs
src/Snack/Widget/: CompletionBox.hs  Editor.hs  Render.hs  Type.hs
src/System/Console/: Haskeline.hs
src/System/Console/Haskeline/: Backend.hs  Command.hs  IO.hs  InputT.hs  Internal.hs  RunCommand.hs  Term.hs
src/System/Console/Haskeline/Command/: Completion.hs
