cabal-version:      2.2
name:               snack
version:            0.1.0.0
synopsis:           Lightweight framework for building command-line applications.
description:        Please see the README on Github at
                    <https://github.com/haskell-Z/snack#readme>
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c) Judah Jacobson, Hu
author:             hu, Judah Jacobson
maintainer:         husj@emqx.io
tested-with:        GHC == 8.10.3, GHC == 8.8.4, GHC == 8.6.5
category:           User Interfaces
homepage:           https://github.com/haskell-Z/snack
bug-reports:        https://github.com/haskell-Z/snack/issues
build-type:         Simple
extra-source-files: README.md
                    ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/haskell-Z/snack

library
    hs-source-dirs: src

    Build-depends: base >=4.9 && < 4.17, containers>=0.4 && < 0.7,
                   brick >= 0.17, vty >= 5.15, split >= 0.2, 
                   text-zipper
    Default-Language: Haskell98
    Default-Extensions:
    Exposed-Modules:
                Snack
    Other-Modules:
                Snack.Event.Completion
                Snack.Event.HandleEvent
                Snack.Widget.Editor
                Snack.Widget.CompletionBox
                Snack.Widget.Render
                Snack.Widget.Type
                Snack.Terminal

    ghc-options: -Wall

test-suite snack-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:      base >= 4.11 && < 5, hspec, snack
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
                      -threaded -rtsopts -with-rtsopts=-N